Commit source before re-build project